# bookrack

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/app/: Cargo.toml  tauri.conf.json
crates/app/src/: launch.rs  lib.rs  main.rs  runtime_handle.rs  tray.rs
crates/app/web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
crates/app/web/src/: App.svelte  app.css  main.ts
crates/audit-profile/: Cargo.toml
crates/audit-profile/data/: audit_data.toml  audit_profile.toml  headings.toml
crates/audit-profile/src/: data.rs  fingerprint.rs  headings.rs  lib.rs  load.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: actor.rs  book_distill_audit.rs  book_pipeline_audit.rs  book_state.rs  cascade.rs  catalog_meta.rs  csl.rs  db.rs  effective.rs  expressions.rs  intake.rs  item_pipeline_audit.rs  item_state.rs  lib.rs  mcp_tool_calls.rs  metadata_audit.rs  migrate.rs  node_categories.rs  node_contributors.rs  node_overrides.rs  node_paper_audit.rs  node_publication_attrs.rs  node_reviews.rs  node_role_takeovers.rs  pipeline_run_summary.rs  pipeline_runs.rs  retrieval_call_hits.rs  retrieval_calls.rs  retrieval_issues.rs  toc_edits.rs  works.rs
crates/catalog/tests/: intake_format.rs  readonly_file.rs
crates/cli/: Cargo.toml
crates/cli/src/: distill_cmd.rs  doctor.rs  dryrun.rs  embed_helpers.rs  error.rs  exec.rs  exec_control.rs  init.rs  lib.rs  libraries_local.rs  main.rs  ops_helpers.rs  preflight.rs  queue.rs  remove.rs  render.rs  retrieval_cmd.rs  run.rs  runs_cmd.rs  util.rs
crates/cli/src/cmd/: audit_profile.rs  books.rs  corpus.rs  info.rs  ingest.rs  intake_ocr.rs  libraries.rs  metadata.rs  mod.rs  pipeline_trail.rs  query.rs  repl_client.rs  stamps.rs  vectors.rs  verify.rs
crates/cli/src/fixtures/: smoke.txt
crates/cli/src/render/: confirm.rs  distribution.rs  human.rs  job_report.rs  mod.rs  progress.rs  table.rs  time.rs
crates/cli/tests/: exec_e2e.rs  mcp_parity.rs  oneshot_e2e.rs  preflight_mismatch.rs  quit_e2e.rs  repl_e2e.rs  second_launch.rs
crates/cli/tests/common/: mod.rs
crates/config/: Cargo.toml  LLAMA_SERVER_VERSION.md
crates/config/src/: detect.rs  lib.rs  llama_server_pin.rs  manifest.rs  profile_ref.rs  registry.rs  reranker_model_pin.rs
crates/control-client/: Cargo.toml
crates/control-client/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error_chain.rs  item_kind.rs  kinded_node_id.rs  lib.rs  node_type.rs  partition.rs  queue.rs  scope.rs
crates/corpus/: Cargo.toml
crates/corpus/src/: db.rs  index_meta.rs  lib.rs  node.rs  partition.rs  resolve.rs
crates/dbkit/: Cargo.toml
crates/dbkit/src/: backup.rs  connection.rs  ddl.rs  lib.rs  meta.rs  open.rs  row.rs  spec.rs  timing.rs  verify.rs
crates/dbkit/tests/: fts5_trigram.rs  generated_column.rs
crates/diagnose/: Cargo.toml
crates/diagnose/src/: lib.rs  manifest.rs  options.rs  scrub.rs  tarball.rs
crates/diagnose/src/collectors/: catalog.rs  corpus.rs  crashes.rs  env.rs  logs.rs  mod.rs  vectors.rs
crates/diagnose/tests/: collect.rs
crates/distill/: Cargo.toml
crates/distill/data/: property_catalog.toml  quality_flags.toml  stage_catalog.toml
crates/distill/src/: anchors.rs  book_toml.rs  catalogs.rs  core.rs  dispatch.rs  error.rs  extractor.rs  finalize.rs  lib.rs  patterns.rs  pipeline.rs  segment.rs  splitter.rs
crates/distill/tests/: it_pipelines.rs
crates/embed/: Cargo.toml
crates/embed/src/: lib.rs  probe.rs
crates/extract/: Cargo.toml  PDFIUM_VERSION.md
crates/extract/src/: contract.rs  detect.rs  envelope.rs  epub.rs  headings.rs  html.rs  html_parse.rs  lib.rs  ocr.rs  pdf.rs  pdf_paper.rs  pdfium_pin.rs  quality.rs  txt.rs
crates/extract/tests/: dep_hash.rs  epub.rs  html.rs  ocr.rs  pdf.rs  txt.rs
crates/extract/tests/common/: mod.rs
crates/glean/: Cargo.toml
crates/glean/data/: paper_audit_data.toml  paper_audit_profile.toml
crates/glean/src/: dryrun.rs  identify.rs  lib.rs  reaudit.rs  rebuild.rs  reembed.rs  reset.rs  stamps.rs
crates/glean/src/audit/: csl_required.rs  data.rs  mod.rs  profile.rs  projection.rs  report.rs  signals.rs
crates/glean/tests/: end_to_end.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: chunk.rs  dryrun.rs  embed_run.rs  envelope.rs  lib.rs  ocr.rs  reaudit.rs  rebuild.rs  reembed.rs  reset.rs  sentences.rs  structure.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs  reference.rs
crates/mcp/tests/: graceful_shutdown.rs
crates/metadata/: Cargo.toml
crates/metadata/data/: publishers.example.toml  watermarks.example.toml
crates/metadata/src/: filename.rs  lib.rs  publishers.rs  report.rs  rules.rs  signals.rs
crates/metadata/tests/: audit.rs
crates/metadata/tests/fixtures/: cjk_sample.txt
crates/obs/: Cargo.toml
crates/obs/src/: lib.rs  stream.rs
crates/ops/: Cargo.toml
crates/ops/src/: lib.rs  recorder.rs  registry.rs
crates/ops/src/dto/: audit.rs  (+5 more)
crates/ops/tests/: audit_trail_reads.rs  glean_run_lifecycle.rs  listings.rs  metadata_report_reads.rs  metadata_writes.rs  passage_reads.rs  recorder.rs  toc_reads.rs
crates/query/: Cargo.toml
crates/query/src/: dto.rs  lib.rs
crates/query/tests/: search.rs
crates/refs/: Cargo.toml
crates/refs/src/: indexes.rs  lib.rs  migrate.rs  types.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: audit_helpers.rs  daemon.rs  doctor.rs  embed_helpers.rs  lib.rs  pdfium_install.rs  profile.rs  queue.rs  render.rs  rerank_supervisor.rs  reranker_install.rs  rlimit.rs
crates/runtime/tests/: control_error_codes.rs  control_minimal.rs  control_writes.rs  crash_replay.rs  daemon_lifecycle.rs  eager_mount.rs  glean_submit.rs  papers_maintenance.rs  queue_lifecycle.rs  wizard.rs  wizard_registry_env.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/translate/: Cargo.toml
crates/translate/src/: audit.rs  glossary_terms.rs  glossary_translations.rs  lib.rs  meta.rs  migrate.rs  segments.rs  units.rs  witnesses.rs
crates/vectors/: Cargo.toml
crates/vectors/src/: lib.rs  meta.rs
(+154 files in other folders)
