[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["spikes"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Collegium-Siderum/bookrack"

# Shared dependency versions. Member crates opt in with `<dep>.workspace = true`.
[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `net` and `signal` are for the MCP daemon: a TCP listener and a
# Ctrl-C graceful-shutdown signal. Additive — other crates ignore them.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
# `bundled` compiles SQLite in-tree, so no system libsqlite is required.
rusqlite = { version = "0.37", features = ["bundled"] }
lancedb = "0.29"
# Arrow companions of lancedb: the chunks-table record batches are built
# and read through them. Their version must track lancedb's arrow.
arrow-array = "58"
arrow-schema = "58"
futures = "0.3"
# EPUB container access for the `extract` crate. Behaviour-sensitive:
# the spine and TOC it yields shape block boundaries, so its version is
# part of the stamped `extractor_version`.
rbook = "0.7"
# HTML / XHTML parsing for `extract`, behaviour-sensitive for the same
# reason: a parser change can shift where blocks begin and end.
scraper = "0.24"
# Legacy-encoding detection for `extract`'s plain-text adapter: decodes
# GBK / GB2312 (`.txt` files carry no encoding declaration).
encoding_rs = "0.8"
# PDF text extraction for `extract`. Binds the PDFium native library at
# runtime; the binary is sourced and pinned separately — see
# crates/extract/PDFIUM_VERSION.md. The pdfium_NNNN feature pins the C
# API surface to one PDFium build and MUST match the chromium/NNNN
# binary release, or symbol resolution fails at runtime. `thread_safe`
# serializes PDFium's non-reentrant C API behind a global mutex.
pdfium-render = { version = "0.9", default-features = false, features = [
    "pdfium_7763",
    "thread_safe",
] }
text-splitter = "0.30"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
# Structured logging facade. Library crates depend only on this; they
# emit spans and events and never touch a subscriber.
tracing = "0.1"
# Subscriber implementation, pulled in only by executable entry points:
# `env-filter` for level directives, `fmt` for the human console layer,
# `json` for the structured file layer.
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# Rolling-file, non-blocking writer for the JSON log layer. Entry-point
# only, alongside tracing-subscriber.
tracing-appender = "0.2"
# MCP protocol SDK, used only by the `mcp` entry-point crate. Features are
# trimmed to a streamable-HTTP server: no client, no reqwest, no auth. The
# `server` feature pulls schemars (re-exported, used for tool input
# schemas) and chrono transitively.
rmcp = { version = "1.7", default-features = false, features = [
    "server",
    "macros",
    "transport-streamable-http-server",
] }
# HTTP server that hosts the MCP streamable-HTTP service. Entry-point only,
# alongside rmcp; hyper comes in transitively.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
sha2 = "0.10"
# NFKC for the `normalize` crate. Behaviour-sensitive: a bundled Unicode
# data update can shift normalized output. Pinned via Cargo.lock.
unicode-normalization = "0.1"
# `.env` file loading for the `config` crate.
dotenvy = "0.15"
# Temp directories for tests that need an on-disk store (e.g. LanceDB).
tempfile = "3"
# Builds throwaway EPUB archives from unzipped fixtures in `extract`
# tests, so the fixtures stay reviewable as plain files in the repo.
zip = "2"
