[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["spikes"]

[workspace.package]
version = "0.9.0-dev"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Collegium-Siderum/bookrack"

# Shared dependency versions. Member crates opt in with `<dep>.workspace = true`.
[workspace.dependencies]
# Flexible error reporting type, drop-in replacement for `anyhow` at the
# API level. Paired with `color-eyre` at the CLI entry point to render
# cause chains with rustc-style colored prefixes.
eyre = "0.6"
# Terminal error report renderer for `eyre::Report`. Installed at the
# CLI entry point; provides the colored multi-line `Debug` view used by
# `eprintln!("{err:?}")` and a panic hook with the same theming.
color-eyre = "0.6"
# Dyn-safe async methods on the `WizardDriver` trait in `runtime`, so
# the CLI and GUI front ends can implement the first-run wizard's
# interactive surface behind one object-safe interface.
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# TOML decoder for the `config` crate's library registry, a name->root
# map deserialized through serde. Decode only.
toml = "1"
# Format- and comment-preserving TOML editor for registry write paths:
# mutates individual entries in `registry.toml` without discarding
# operator comments or reordering the rest of the document.
toml_edit = "0.25"
# Platform config-directory discovery for the `config` crate: locates the
# platform-conventional `<config>/bookrack/registry.toml` so a freshly
# installed binary can find its data root without an exported variable.
dirs = "5"
# `net` and `signal` are for the MCP daemon: a TCP listener and a
# Ctrl-C graceful-shutdown signal. Additive — other crates ignore them.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
# `bundled` compiles SQLite in-tree, so no system libsqlite is required.
# The bundled SQLite is built with FTS5 enabled, which the `refs` crate
# uses for per-entries-table sidecar indexes (trigram tokenizer over
# chinese_name + english_name + bio_annotation). See
# `crates/dbkit/tests/fts5_trigram.rs` for the conformance check.
rusqlite = { version = "0.40", features = ["bundled"] }
# Schema migration engine for catalog.db, which is source-of-truth and
# cannot be rebuilt. Tracks the applied revision in SQLite's user_version
# and runs ordered, transactional migrations. Default features only; the
# optional rust_decimal support is not enabled.
rusqlite_migration = "2.6.0"
lancedb = "0.30"
# Arrow companions of lancedb: the chunks-table record batches are built
# and read through them. Their version must track lancedb's arrow.
arrow-array = "58"
arrow-schema = "58"
futures = "0.3"
# EPUB container access for the `extract` crate. Behaviour-sensitive:
# the spine and TOC it yields shape block boundaries, so its version is
# part of the stamped `extractor_version`.
rbook = "0.7"
# HTML / XHTML parsing for `extract`, behaviour-sensitive for the same
# reason: a parser change can shift where blocks begin and end.
scraper = "0.27"
# Legacy-encoding detection for `extract`'s plain-text adapter: decodes
# GBK / GB2312 (`.txt` files carry no encoding declaration).
encoding_rs = "0.8"
# PDF text extraction for `extract`. Binds the PDFium native library at
# runtime; the binary is sourced and pinned separately — see
# crates/extract/PDFIUM_VERSION.md. The pdfium_NNNN feature pins the C
# API surface to one PDFium build and MUST match the chromium/NNNN
# binary release, or symbol resolution fails at runtime. `thread_safe`
# serializes PDFium's non-reentrant C API behind a global mutex.
pdfium-render = { version = "0.9", default-features = false, features = [
    "pdfium_7763",
    "thread_safe",
] }
text-splitter = "0.30"
# Compiled regex matching for the `glean` IDENTIFY pass: DOI shapes,
# arXiv id forms (new `NNNN.NNNNN` and old `cat/NNNNNNN`), ISSN, and
# venue-phrase scans over the paper's body and footer. License:
# MIT OR Apache-2.0.
regex = "1"
# HTTP client. The `embed` crate reaches Ollama over plain local HTTP
# with the JSON body codec; the `runtime` crate's pinned-PDFium
# installer downloads from GitHub releases, which needs the rustls TLS
# stack. No system TLS library is linked.
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
clap = { version = "4", features = ["derive"] }
# Structured logging facade. Library crates depend only on this; they
# emit spans and events and never touch a subscriber.
tracing = "0.1"
# Subscriber implementation, pulled in only by executable entry points:
# `env-filter` for level directives, `fmt` for the human console layer,
# `json` for the structured file layer.
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# Rolling-file, non-blocking writer for the JSON log layer. Entry-point
# only, alongside tracing-subscriber.
tracing-appender = "0.2"
# MCP protocol SDK, used only by the `mcp` entry-point crate. Features are
# trimmed to a streamable-HTTP server: no client, no reqwest, no auth. The
# `server` feature pulls schemars (re-exported, used for tool input
# schemas) and chrono transitively.
rmcp = { version = "1.7", default-features = false, features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "client",
    "transport-streamable-http-client-reqwest",
] }
# HTTP server that hosts the MCP streamable-HTTP service. Entry-point only,
# alongside rmcp; hyper comes in transitively.
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
sha2 = "0.10"
# NFKC for the `normalize` crate. Behaviour-sensitive: a bundled Unicode
# data update can shift normalized output. Pinned via Cargo.lock.
unicode-normalization = "0.1"
# `.env` file loading for the `config` crate.
dotenvy = "0.15"
# RFC 3339 timestamp formatting for the `ingest` embed-run stamp and the
# `diagnose` manifest. The `serde` feature lets DateTime<Utc> derive
# Serialize / Deserialize for the persistent CLI queue state.
chrono = { version = "0.4", features = ["serde"] }
# UUIDv7 generator for the CLI ingest-queue job id. The id is stored as
# a String so the queue command's prefix match is a simple str search;
# only the `v7` feature is needed.
uuid = { version = "1", features = ["v7"] }
# Temp directories for tests that need an on-disk store (e.g. LanceDB).
tempfile = "3"
# getrlimit/setrlimit for the `runtime` crate: daemon hosts raise the
# soft RLIMIT_NOFILE at startup, because GUI-launched processes inherit
# a default too small for a batch ingest's LanceDB fragment files.
# Unix-only consumer; `process` is the resource-limit feature.
rustix = { version = "1.1", features = ["process"] }
# The audit-profile crate, pinned at the workspace level so every
# downstream member crate (`metadata`, `extract`, `ingest`) consumes
# the same surface. Houses the toggle and threshold set the metadata
# audit and upstream half-rules read at evaluation time.
bookrack-audit-profile = { path = "crates/audit-profile" }
# The index-profile crate, pinned at the workspace level so the runtime
# and cli crates downstream consume the same surface: the built-in
# `IndexProfile` presets, the static validator, and the model registry
# that couples embed × ANN × reranker knobs into one named atom.
bookrack-index-profile = { path = "crates/index-profile" }
# The reference-book read store. Pinned at the workspace level so the
# distill, mcp, and cli crates downstream consume the same surface
# (the `Refs` handle and the `reference.db` migration target version).
bookrack-refs = { path = "crates/refs" }
# The distill pipeline. Pinned at the workspace level so the cli and
# mcp crates downstream consume the same `Pipeline` / `Stage` /
# `ParseError` surface. Phase 3 ships the framework only.
bookrack-distill = { path = "crates/distill" }
# Builds throwaway EPUB archives from unzipped fixtures in `extract`
# tests, so the fixtures stay reviewable as plain files in the repo.
zip = "8"
# TAR archive writer for the `diagnose` crate. The diagnose tarball
# packages crash reports, audit-table excerpts, and metadata snapshots
# into one byte-stable bundle; this crate writes the archive entries.
tar = "0.4"
# DEFLATE compression for the same diagnose tarball, used to gzip-wrap
# the TAR stream before write-out.
flate2 = "1"
# Cross-platform advisory file locks (Unix flock + Windows LockFileEx)
# for the `ingest` crate. One sentinel file under the data root is
# held with a non-blocking write lock for the duration of one ingest
# run, so two `bookrack ingest` processes pointed at the same library
# refuse rather than race. License: MIT OR Apache-2.0.
fs2 = "0.4"
# Stream adapters for tokio primitives. The `sync` feature pulls in
# `tokio-stream::wrappers::BroadcastStream`, which the `mcp` crate
# wraps around a `LogStreamHandle::subscribe()` receiver to expose the
# in-process log stream as a Server-Sent Events endpoint under
# `/session/logs`. License: MIT; in lockstep with `tokio` itself.
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
# Compile-time TypeScript binding generator. Used as a dev-dependency
# of `bookrack-runtime` so `cargo test` exports `.ts` files mirroring
# the `Event` enum and the control-plane DTOs into
# `crates/app/web/src/generated/`. The runtime crate's release build
# does not link it. License: MIT.
ts-rs = { version = "10", features = ["serde-compat", "no-serde-warnings"] }
# Desktop shell framework for the `app` crate: webview window, tray
# icon, and event loop. Default features (wry, compression,
# dynamic-acl, x11/dbus on Linux, common-controls-v6 on Windows) plus
# `tray-icon` for the persistent tray entry point.
# License: MIT OR Apache-2.0.
tauri = { version = "2", features = ["tray-icon"] }
# Build-script companion of `tauri`: validates `tauri.conf.json` and
# generates the ACL schemas the macro context consumes.
tauri-build = "2"
# Routes a second launch of the same app into the running instance's
# callback instead of a second event loop. License: MIT OR Apache-2.0.
tauri-plugin-single-instance = "2"
# Tabular output renderer for the CLI's read-side commands (queue
# list, libraries list, papers find/list/show). The render layer
# wraps it behind `KvTable` / `RowTable` so subcommands compose
# tables without learning the crate's API. License: MIT.
comfy-table = "7"
# Spinner and progress-bar primitive for the CLI's async-job
# renderers (ingest, vectors, intake ocr, ...). The render layer's
# `SpinnerWithStage` wraps it so the carriage-return rewrites do
# not bleed into individual subcommand code. License: MIT.
indicatif = "0.18"
# ANSI style tokens shared with `clap`'s built-in styling. The
# render layer uses it to derive a `ColorMode`-aware palette without
# pulling in a heavier color library. License: MIT OR Apache-2.0.
anstyle = "1"

# Test binaries link the full lance / datafusion / arrow / rustls
# dependency tree once per crate under test. Full debug info pushes the
# linker's peak resident memory past the GitHub-hosted runner's budget,
# producing SIGBUS at link time. Line tables keep enough symbol data for
# panic backtraces while cutting debug-section size by an order of
# magnitude.
[profile.test]
debug = "line-tables-only"

# Same reasoning extended to the dev profile, which covers `cargo build`,
# `cargo check`, `cargo clippy`, and the `rust-analyzer` worker. Full
# DWARF across a 27-crate workspace with heavy dependency trees
# (lance/arrow, tantivy, the Tauri webview stack, pdfium-render) inflates
# `target/debug` by hundreds of gigabytes once incremental caches
# accumulate. Line tables preserve panic backtraces and `RUST_BACKTRACE=1`
# symbol names; stepping a debugger into third-party crates loses local
# variable inspection, which is an acceptable trade.
[profile.dev]
debug = "line-tables-only"

# Strip debug info entirely from third-party crates. Workspace code keeps
# the line-tables setting above.
[profile.dev.package."*"]
debug = 0
