[package]
name = "bookrack-catalog"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-core = { path = "../core" }
bookrack-dbkit = { path = "../dbkit" }
rusqlite.workspace = true
rusqlite_migration.workspace = true
# CSL-JSON serialization + the `extras_json` blob's opaque passthrough.
serde.workspace = true
serde_json.workspace = true
# SHA-256 prefix for the pipeline_run_id composite, so two same-second
# invocations against different libraries do not collide.
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Round-trip test for the committed v1 intake fixture opens the file
# through a temp copy so a CI run never mutates the committed bytes.
tempfile.workspace = true
