[package]
name = "bookrack-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bookrack"
path = "src/main.rs"

[dependencies]
bookrack-catalog = { path = "../catalog" }
bookrack-config = { path = "../config" }
bookrack-control-client = { path = "../control-client" }
bookrack-core = { path = "../core" }
bookrack-corpus = { path = "../corpus" }
bookrack-diagnose = { path = "../diagnose" }
bookrack-embed = { path = "../embed" }
bookrack-ingest = { path = "../ingest" }
bookrack-mcp = { path = "../mcp" }
bookrack-obs = { path = "../obs" }
bookrack-ops = { path = "../ops" }
bookrack-query = { path = "../query" }
bookrack-repl-grammar = { path = "../repl-grammar" }
bookrack-runtime = { path = "../runtime" }
bookrack-session = { path = "../session" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reedline.workspace = true
shlex.workspace = true
# `bookrack init` writes a tempdir for the end-to-end smoke ingest, so
# the user's chosen data root stays untouched until validation passes.
tempfile.workspace = true
# MCP client-side transport for `bookrack exec`: connects to the
# session's streamable-HTTP endpoint to call tools without opening
# any database itself.
rmcp.workspace = true
# HTTP client used by the rmcp streamable-HTTP transport. The crate is
# already in the workspace; declare it here so the StreamableHttpClient
# constructor receives an explicit handle.
reqwest.workspace = true
