[package]
name = "bookrack-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bookrack"
path = "src/main.rs"

[dependencies]
bookrack-config = { path = "../config" }
bookrack-control-client = { path = "../control-client" }
bookrack-core = { path = "../core" }
bookrack-diagnose = { path = "../diagnose" }
bookrack-embed = { path = "../embed" }
bookrack-mcp = { path = "../mcp" }
bookrack-obs = { path = "../obs" }
bookrack-ops = { path = "../ops" }
bookrack-cli-grammar = { path = "../cli-grammar" }
bookrack-runtime = { path = "../runtime" }
bookrack-session = { path = "../session" }
# v2 distill rollout (phase 10): the local `bookrack distill` family
# (build / verify / list) opens `Refs` directly, reads book.toml,
# and runs the pipeline without going through the daemon's control
# plane.
bookrack-refs.workspace = true
bookrack-distill.workspace = true
chrono.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
fs2.workspace = true
tempfile.workspace = true
