[package]
name = "bookrack-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
# Timestamp fields on the persistent ingest queue (`queued_at`,
# `started_at`, `finished_at`). Round-tripped through serde as RFC 3339
# strings.
chrono.workspace = true

[dev-dependencies]
serde_json.workspace = true
