[package]
name = "bookrack-corpus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-core = { path = "../core" }
bookrack-dbkit = { path = "../dbkit" }
rusqlite.workspace = true
sha2.workspace = true
thiserror.workspace = true
