[package]
name = "bookrack-distill"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# `Map<String, Value>` for `Ctx::extras` and `EntryDraft::payload`, the
# untyped grab-bags downstream stages and the `to_entry_draft` finalize
# stage carry between themselves.
serde_json.workspace = true
thiserror.workspace = true
# Decode the three repo-shipped controlled vocabularies under data/
# and the operator-authored `<data>/reference/<slug>/book.toml`.
serde.workspace = true
toml.workspace = true
# Compiled patterns for the splitter / extractor / finalize stages:
# year spans, bracketed tags, gender markers, variant separators,
# quoted strings, and the splitter regex `head_split_by`.
regex.workspace = true

[dev-dependencies]
# Throwaway directories for the phase-7 `load_pipeline` round-trip
# test that writes a book.toml fixture before invoking the loader.
tempfile.workspace = true
