[package]
name = "bookrack-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rbook.workspace = true
scraper.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
zip.workspace = true
