[package]
name = "bookrack-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-config = { path = "../config" }
bookrack-audit-profile.workspace = true
encoding_rs.workspace = true
pdfium-render.workspace = true
rbook.workspace = true
scraper.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Also a normal dependency above; the TXT test re-encodes a fixture to
# GB18030 to exercise the legacy-encoding decode path.
encoding_rs.workspace = true
serde_json.workspace = true
tempfile.workspace = true
zip.workspace = true
