[package]
name = "bookrack-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-config = { path = "../config" }
bookrack-core = { path = "../core" }
bookrack-audit-profile.workspace = true
# `ExtractionEnvelope.captured_at` is a wall-clock RFC 3339 timestamp.
chrono.workspace = true
encoding_rs.workspace = true
pdfium-render.workspace = true
rbook.workspace = true
# Anchor and section-marker regexes for the paper abstract extractor.
regex.workspace = true
scraper.workspace = true
serde.workspace = true
# JSON encoding for the envelope module hoisted from ingest.
serde_json.workspace = true
# Atomic write of the envelope file via a same-dir tempfile + rename.
tempfile.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Also a normal dependency above; the TXT test re-encodes a fixture to
# GB18030 to exercise the legacy-encoding decode path.
encoding_rs.workspace = true
# Hashes Cargo.lock entries for behaviour-sensitive crates in the
# dep-hash anchor test.
sha2.workspace = true
zip.workspace = true
