[package]
name = "bookrack-glean"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-audit-profile.workspace = true
bookrack-catalog = { path = "../catalog" }
bookrack-config = { path = "../config" }
bookrack-core = { path = "../core" }
bookrack-corpus = { path = "../corpus" }
bookrack-embed = { path = "../embed" }
bookrack-extract = { path = "../extract" }
bookrack-normalize = { path = "../normalize" }
bookrack-vectors = { path = "../vectors" }
chrono.workspace = true
regex.workspace = true
serde.workspace = true
sha2.workspace = true
text-splitter.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
sha2.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
