[package]
name = "bookrack-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-core = { path = "../core" }
bookrack-corpus = { path = "../corpus" }
bookrack-extract = { path = "../extract" }
bookrack-normalize = { path = "../normalize" }
text-splitter.workspace = true
thiserror.workspace = true
sha2.workspace = true
