[package]
name = "bookrack-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bookrack-query = { path = "../query" }
bookrack-config = { path = "../config" }
bookrack-embed = { path = "../embed" }
bookrack-obs = { path = "../obs" }
bookrack-ops = { path = "../ops" }
bookrack-catalog = { path = "../catalog" }
rmcp.workspace = true
axum.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
